--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Paweł Gościcki's CV</title>
 
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Kalam|Open+Sans:400,600" rel="stylesheet">
 </head>
 
