Add avatar to page

--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@ header > h2 {
   margin: 0.6rem 0;
 }
 
+.avatar {
+  border-radius: 50%;
+  box-shadow: 0 0 0 5px #fff, 0 0 0 6px #ccc;
+  position: absolute;
+  right: 5rem;
+  top: -2rem;
+  width: 14rem;
+}
+
 section > h1 {
   border-bottom: 3px solid #3f0e95;
   color: #3f0e95;
@@ -144,6 +153,8 @@ section > h1 {
         </ul>
       </div>
     </section>
+
+    <img class="avatar" src="avatar.jpg" alt="Paweł Gościcki Avatar">
   </header>
 
   <div class="content">
