--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Kalam|Open+Sans:400,600" rel="stylesheet">
+
+  <link rel="icon" href="avatar-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="avatar-192x192.png">
+  <meta name="msapplication-TileImage" content="avatar-192x192.png">
 </head>
 
 <style type="text/css">
