Add header links (github, linkedin, blog, email, etc.)

--- a/index.html
+++ b/index.html
@@ -149,11 +149,17 @@ section > h1 {
     <section class="contact">
       <div class="column-left">
         <ul>
+          <li>email</li>
+          <li><a href="tel:+48602840799">+48 602 840 799</a></li>
+          <li>Gdańsk, Poland</li>
         </ul>
       </div>
 
       <div class="column-right">
         <ul>
+          <li><a href="http://pawelgoscicki.com">pawelgoscicki.com</a></li>
+          <li><a href="https://pl.linkedin.com/in/pawelgoscicki">LinkedIn</a></li>
+          <li><a href="https://github.com/pjg">GitHub</a></li>
         </ul>
       </div>
     </section>
