--- a/index.html
+++ b/index.html
@@ -129,12 +129,19 @@ a {
 .container {
   background: url("paper.jpg");
   background-color: white;
-  border: 1px solid white;
   color: black;
   margin: 4rem auto;
   min-height: 60rem;
   padding: 6rem 4rem;
   width: 70rem;
+}
+
+.stripe {
+  background: url("stripe.png");
+  background-repeat: repeat-x;
+  background-size: 91px 6px;
+  height: 6px;
+  margin: -5.6rem -4rem 5rem;
 }
 
 .content {
@@ -215,6 +222,9 @@ section > h1 {
 <body>
 
 <div class="container">
+
+  <div class="stripe">
+  </div>
 
   <header>
     <h1>PAWEŁ GOŚCICKI</h1>
