Move fontawesome font into fonts/ directory

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a:hover, a:active {
 
 @font-face {
   font-family: 'FontAwesome';
-  src:  url('fontawesome-webfont.woff?v=4.6.3') format('woff');
+  src:  url('fonts/fontawesome-webfont.woff?v=4.6.3') format('woff');
   font-weight: normal;
   font-style: normal;
 }
