Moves images into images/ directory

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Kalam|Open+Sans:400,600" rel="stylesheet">
 
-  <link rel="icon" href="avatar-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon-precomposed" href="avatar-192x192.png">
-  <meta name="msapplication-TileImage" content="avatar-192x192.png">
+  <link rel="icon" href="images/avatar-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="images/avatar-192x192.png">
+  <meta name="msapplication-TileImage" content="images/avatar-192x192.png">
 </head>
 
 <script type="text/javascript">
@@ -127,7 +127,7 @@ a {
 }
 
 .container {
-  background: url("paper.jpg");
+  background: url("images/paper.jpg");
   background-color: white;
   color: black;
   margin: 4rem auto;
@@ -137,7 +137,7 @@ a {
 }
 
 .stripe {
-  background: url("stripe.png");
+  background: url("images/stripe.png");
   background-repeat: repeat-x;
   background-size: 91px 6px;
   height: 6px;
@@ -248,7 +248,7 @@ section > h1 {
       </div>
     </section>
 
-    <img class="avatar" src="avatar.jpg" alt="Paweł Gościcki Avatar">
+    <img class="avatar" src="images/avatar.jpg" alt="Paweł Gościcki Avatar">
   </header>
 
   <div class="content">
