Add 'Bio' section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
         </article>
       </section>
 
+      <section class="bio">
+        <h1>BIO</h1>
+
+        <article>
+          <p>My main specialization is <strong>back-end</strong> web application development in
+          <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
+
+          <p>I've been a Ruby/Rails developer for over <strong>10 years</strong> now,
+          working remotely for most of my career.</p>
+
+          <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
+          in software development. In the past I worked as a <strong>Senior Ruby Developer</strong>
+          and <strong>Team Lead</strong>.</p>
+        </article>
+      </section>
+
     </div>
 
   </div>
