Add 'Languages' section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,55 @@
         </article>
       </section>
 
+      <section class="languages">
+        <h1>LANGUAGES</h1>
+
+        <article>
+          <ul>
+            <li>
+              <p class="language">Polish</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="language">English</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="language">German</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+            <li>
+              <p class="language">Russian</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+          </ul>
+        </article>
+      </section>
+
     </div>
 
   </div>
