Add 'Skills' section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <img class="avatar" src="images/avatar.jpg" alt="Paweł Gościcki Avatar">
+    <img class="avatar" src="images/avatar.jpg" alt="Paweł Gościcki">
   </header>
 
   <div class="content">
@@ -88,7 +88,7 @@
 
           <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
           in software development. In the past I worked as a <strong>Senior Ruby Developer</strong>
-          and <strong>Team Lead</strong>.</p>
+          and a <strong>Team Lead</strong>.</p>
         </article>
       </section>
 
@@ -138,6 +138,27 @@
               </div>
             </li>
           </ul>
+        </article>
+      </section>
+
+      <section class="skills">
+        <h1>SKILLS</h1>
+
+        <article>
+          <p class="tags">
+            <span>Ruby</span>
+            <span>Ruby on Rails</span>
+            <span>TDD</span>
+            <span>RSpec</span>
+            <span>Git</span>
+            <span>PostgreSQL</span>
+            <span>MySQL</span>
+            <span>HTML5</span>
+            <span>CSS3</span>
+            <span>Javascript</span>
+            <span>jQuery</span>
+            <span>Ember.js</span>
+          </p>
         </article>
       </section>
 
