Add 'Education' section

--- a/index.html
+++ b/index.html
@@ -162,6 +162,27 @@
         </article>
       </section>
 
+      <section class="education">
+        <h1>EDUCATION</h1>
+
+        <article>
+          <ul class="education-experience">
+            <li>
+              <h2>MSc in Computer Science</h2>
+              <h3>Gdańsk University of Technology</h3>
+
+              <p class="period"><i class="fa fa-calendar"></i> <span>September 1997 - June 2002</span></p>
+            </li>
+            <li>
+              <h2>MSc in Management and Marketing</h2>
+              <h3>Gdańsk University of Technology</h3>
+
+              <p class="period"><i class="fa fa-calendar"></i> <span>February 2002 - February 2004</span></p>
+            </li>
+          </ul>
+        </article>
+      </section>
+
     </div>
 
   </div>
