Add a [WIP] 'Experience' section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,25 @@
         <h1>EXPERIENCE</h1>
 
         <article>
-        My experience..
+          <ul class="education-experience">
+            <li>
+              <h2>Founder / Owner</h2>
+              <h3>Sagraffo</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>January 2010 - ongoing</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
+                </p>
+              </div>
+
+              <ul class="details">
+                <li>Founder of a one-man Ruby on Rails web development consultancy.</li>
+              </ul>
+            </li>
+          </ul>
         </article>
       </section>
 
@@ -83,7 +101,7 @@
           <p>My main specialization is <strong>back-end</strong> web application development in
           <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
 
-          <p>I've been a Ruby/Rails developer for over <strong>10 years</strong> now,
+          <p>I've been a Ruby/Rails developer for over <strong>10&nbsp;years</strong> now,
           working remotely for most of my career.</p>
 
           <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
