Add more 'Experience' entries

--- a/index.html
+++ b/index.html
@@ -70,12 +70,54 @@
                   <i class="fa fa-calendar"></i> <span>January 2010 - ongoing</span>
                 </p>
                 <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland / Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Founder of a one-man Ruby on Rails web development consultancy</li>
+                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle)</li>
+                <li>Built both back-end and front-end for an online newspaper in Kaszuby (Express Kaszubski)</li>
+                <li>Built storage management system with automatic stock/prices synchronization with warehouse data (TopWhite)</li>
+                <li>Built custom CMS system powering the website for a country resort (Kania Lodge)</li>
+                <li>Built custom CMS and stocks management system for an online shop selling wine (Wine Express)</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>PHP Developer</h2>
+              <h3>Gdańsk University of Technology, Computer Science Centre</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>April 2004 - November 2009</span>
+                </p>
+                <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
                 </p>
               </div>
 
-              <ul class="details">
-                <li>Founder of a one-man Ruby on Rails web development consultancy.</li>
+              <ul class="experience-details">
+                <li>Responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>Graphic Designer</h2>
+              <h3>Pomorska Agencja Reklamowa</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>July 1998 - November 2001</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterized logos into vectors)</li>
+                <li>Designed printed ads</li>
               </ul>
             </li>
           </ul>
