Add more entries into 'Experience' section

--- a/index.html
+++ b/index.html
@@ -77,9 +77,69 @@
               <ul class="experience-details">
                 <li>Founder of a one-man Ruby on Rails web development consultancy</li>
                 <li>Lead a team building an online marketplace for employers and freelancers (Kumdle)</li>
-                <li>Built both back-end and front-end for an online newspaper in Kaszuby (Express Kaszubski)</li>
-                <li>Built storage management system with automatic stock/prices synchronization with warehouse data (TopWhite)</li>
-                <li>Built custom CMS system powering the website for a country resort (Kania Lodge)</li>
+                <li>Built both back-end and front-end for an online newspaper in Kartuzy (Express&nbsp;Kaszubski)</li>
+                <li>Built storage management system with automatic stocks and prices synchronization with warehouse data (TopWhite)</li>
+                <li>Built custom CMS system powering the website for a country resort (Kania&nbsp;Lodge)</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>Lead Rails Developer</h2>
+              <h3>AirHelp</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>June 2014 - August 2016</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Led a team of seven (initially) Ruby on Rails developers building IT systems of AirHelp</li>
+                <li>Introduced GitHub flow in the development process with pull requests and code reviews</li>
+                <li>Introduced CI process in the development workflow (using TeamCity)</li>
+                <li>Shaped best web development practices across the company</li>
+                <li>Embraced and encouraged the microservices architecture</li>
+                <li>Responsible for shaping the hiring process and hiring new developers (helped grow the company from eight to more than thirty Ruby developers)</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>Lead Rails Developer</h2>
+              <h3>Exvo</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>February 2011 - March 2014</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Led a team of two (at first) and then four Ruby on Rails developers building cloud based operating system bringing your local machine to the web (before the pivot) and a money management platform enabling users to easily send their money to their friends (after the pivot)</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>Web/Ruby/Rails Developer</h2>
+              <h3>Freelane</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>January 2002 - December 2009</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland / Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Built custom CMS and frontend for an online application with postcard wishes (TylkoZyczenia)</li>
+                <li>Built custom CMS for an auto repair station (Żybko)</li>
                 <li>Built custom CMS and stocks management system for an online shop selling wine (Wine Express)</li>
               </ul>
             </li>
@@ -98,7 +158,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
+                <li>Part of a team responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
               </ul>
             </li>
 
