Corrections, wording tweaks

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
               <ul class="experience-details">
                 <li>Founder of a one-man Ruby on Rails web development consultancy</li>
                 <li>Lead a team building an online marketplace for employers and freelancers (Kumdle)</li>
-                <li>Built both back-end and front-end for an online newspaper in Kartuzy (Express&nbsp;Kaszubski)</li>
+                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy (Express&nbsp;Kaszubski)</li>
                 <li>Built storage management system with automatic stocks and prices synchronization with warehouse data (TopWhite)</li>
-                <li>Built custom CMS system powering the website for a country resort (Kania&nbsp;Lodge)</li>
+                <li>Built custom CMS system powering the website for a country guesthouse (Kania&nbsp;Lodge)</li>
               </ul>
             </li>
 
@@ -125,8 +125,8 @@
             </li>
 
             <li>
-              <h2>Web/Ruby/Rails Developer</h2>
-              <h3>Freelane</h3>
+              <h2>Web / Ruby / Rails Developer</h2>
+              <h3>Freelance</h3>
 
               <div class="period-place">
                 <p class="period">
@@ -138,7 +138,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Built custom CMS and frontend for an online application with postcard wishes (TylkoZyczenia)</li>
+                <li>Built custom CMS and front-end for an online application with postcard wishes (TylkoZyczenia)</li>
                 <li>Built custom CMS for an auto repair station (Żybko)</li>
                 <li>Built custom CMS and stocks management system for an online shop selling wine (Wine Express)</li>
               </ul>
@@ -203,7 +203,7 @@
           <p>My main specialization is <strong>back-end</strong> web application development in
           <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
 
-          <p>I've been a Ruby/Rails developer for over <strong>10&nbsp;years</strong> now,
+          <p>I've been a Ruby/Rails developer for over <strong>ten years</strong> now,
           working remotely for most of my career.</p>
 
           <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
