Add 'Passions' section

--- a/index.html
+++ b/index.html
@@ -303,6 +303,24 @@
         </article>
       </section>
 
+      <section class="passions">
+        <h1>PASSIONS</h1>
+
+        <article>
+          <p class="tags">
+            <span>Kitesurfing</span>
+            <span>Snowboarding</span>
+            <span>Mountainbiking</span>
+            <span>Swimming</span>
+            <span>Tennis</span>
+            <span>Sci-Fi novels</span>
+            <span>Ballroom dancing</span>
+            <span>Cinematography</span>
+            <span>Photography</span>
+          </p>
+        </article>
+      </section>
+
     </div>
 
   </div>
