Add versions to all static assest
(so that their cache can be easily invalidated)

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
 
-  <script type="text/javascript" src="application.js"></script>
+  <script type="text/javascript" src="application.js?version=1"></script>
 
-  <link rel="stylesheet" type="text/css" href="application.css">
+  <link rel="stylesheet" type="text/css" href="application.css?version=1">
 
   <link href="https://fonts.googleapis.com/css?family=Kalam|Open+Sans:400,600" rel="stylesheet">
 
-  <link rel="icon" href="images/avatar-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon-precomposed" href="images/avatar-192x192.png">
-  <meta name="msapplication-TileImage" content="images/avatar-192x192.png">
+  <link rel="icon" href="images/avatar-192x192.png?version=1" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="images/avatar-192x192.png?version=1">
+  <meta name="msapplication-TileImage" content="images/avatar-192x192.png?version=1">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <img class="avatar" src="images/avatar.jpg" alt="Paweł Gościcki">
+    <img class="avatar" src="images/avatar.jpg?version=1" alt="Paweł Gościcki">
   </header>
 
   <div class="content">
