Add entry in the 'Airhelp' experience section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <li>Shaped best web development practices across the company</li>
                 <li>Embraced and encouraged the microservices architecture</li>
                 <li>Responsible for shaping the hiring process and hiring new developers (helped grow the company from eight to more than thirty Ruby developers)</li>
+                <li>Leader of major internal projects (claim state machine, claim value model, OTA partners API, etc.)</li>
               </ul>
             </li>
 
