Add Vue.js to skills

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             <span>HTML5</span>
             <span>CSS3</span>
             <span>Javascript</span>
+            <span>Vue.js</span>
             <span>jQuery</span>
             <span>Ember.js</span>
           </p>
