Update CV with latest position

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
         <article>
           <ul class="education-experience">
             <li>
+              <h2>Software Engineering Manager / Chief Rails Architect</h2>
+              <h3>Hello Bar</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>November 2016 - ongoing</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Responsible for developing awesome bars</li>
+                <li>Managing a team of developers and testers</li>
+              </ul>
+            </li>
+
+            <li>
               <h2>Founder / Owner</h2>
               <h3>Sagraffo</h3>
 
@@ -177,8 +196,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterized logos into vectors)</li>
-                <li>Designed printed ads</li>
+                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterized logos into vectors) and designing printed ads</li>
               </ul>
             </li>
           </ul>
