More clarification about latest position

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <article>
           <ul class="education-experience">
             <li>
-              <h2>Software Engineering Manager / Chief Rails Architect</h2>
+              <h2>Software Engineering Manager</h2>
               <h3>Hello Bar</h3>
 
               <div class="period-place">
@@ -76,7 +76,27 @@
 
               <ul class="experience-details">
                 <li>Responsible for developing awesome bars</li>
-                <li>Managing a team of developers and testers</li>
+                <li>Managing a team of developers and testers, also responsible for hiring</li>
+                <li>Technologies: Ruby on Rails, Sinatra, Ember.js, AWS (EC2, ELB, RDS, DynamoDB, RedShift, SQS, S3, CloudFront)</li>
+              </ul>
+            </li>
+
+            <li>
+              <h2>Ruby on Rails Chief Software Architect</h2>
+              <h3>Crossover for Work</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>November 2016 - ongoing</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Crossover connects companies to the best talent from around the world
+                and provides a seamless end-to-end solution for remote team management.</li>
               </ul>
             </li>
 
@@ -222,12 +242,15 @@
           <p>My main specialization is <strong>back-end</strong> web application development in
           <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
 
-          <p>I've been a Ruby/Rails developer for over <strong>ten years</strong> now,
+          <p>I've been a Ruby/Rails developer for over <strong>twelve years</strong> now,
           working remotely for most of my career.</p>
 
           <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
-          in software development. In the past I worked as a <strong>Senior Ruby Developer</strong>
-          and a <strong>Team Lead</strong>.</p>
+          in software development.</p>
+
+          <p>In the past I worked as a <strong>Senior Ruby Developer</strong>,
+          <strong>Team/Technical Lead</strong> and <strong>Software Engineering Manager</strong>,
+          managing both remote and on-site teams.</p>
         </article>
       </section>
 
@@ -249,6 +272,7 @@
             <span>Vue.js</span>
             <span>jQuery</span>
             <span>Ember.js</span>
+            <span>AWS</span>
           </p>
         </article>
       </section>
