Add Solr/Lambda to skills

--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
             <span>jQuery</span>
             <span>Ember.js</span>
             <span>AWS</span>
+            <span>AWS Lambda</span>
+            <span>Solr</span>
           </p>
         </article>
       </section>
