Link my city to Google Maps

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul>
           <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
           <li><i class="fa fa-fw fa-phone"></i><a href="tel:+48602840799">+48 602 840 799</a></li>
-          <li><i class="fa fa-fw fa-map-marker"></i>Gdańsk, Poland</li>
+          <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps/place/Gda%C5%84sk/@54.3475841,18.6372806,14.4z">Gdańsk, Poland</a></li>
         </ul>
       </div>
 
