--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <header>
     <h1>PAWEŁ GOŚCICKI</h1>
-    <h2>Ruby/Rails programmer, Web developer</h2>
+    <h2>Software Engineering Manager / Senior Ruby Architect</h2>
 
     <section class="contact">
       <div class="column-left">
@@ -62,7 +62,7 @@
         <article>
           <ul class="education-experience">
             <li>
-              <h2>Software Engineering Manager</h2>
+              <h2>Software Engineering Manager / Chief Ruby Architect</h2>
               <h3>Hello Bar</h3>
 
               <div class="period-place">
@@ -75,9 +75,20 @@
               </div>
 
               <ul class="experience-details">
-                <li>Responsible for developing awesome bars</li>
-                <li>Managing a team of developers and testers, also responsible for hiring</li>
-                <li>Technologies: Ruby on Rails, Sinatra, Ember.js, AWS (EC2, ELB, RDS, DynamoDB, RedShift, SQS, S3, CloudFront)</li>
+                <li>Responsible for managing engineering and QA teams</li>
+                <li>Implemented and enforced coding standards</li>
+                <li>Responsible from implementing SCRUM</li>
+                <li>Introduced styling guide tools to the project (Rubocop, ESLint)</li>
+                <li>Centralised the infrastructure by moving all services to AWS</li>
+                <li>Led an effort to increase code coverage from 50% to 97%</li>
+                <li>Scaled production deployments from once per week to multiple per day</li>
+                <li>Built from scratch and launched first AWS Lambda functions</li>
+                <li>Moved core business logic to AWS Lambda</li>
+                <li>Reduced total infrastructure costs by more than 60%</li>
+                <li>Utilised AWS services like EC2, ELB, Lambda, SNS, SQS, DynamoDB, API Gateway, RDS, ElastiCache, Route 53, CloudFront and CloudWatch</li>
+                <li>Architected Hello Bars's data analytics infrastructure utilising Amplitude and AWS QuickSight</li>
+                <li>Responsible for recruitment process for the engineering team</li>
+                <li>Technologies: Ruby on Rails, Vue.js, Ember.js, Javascript (node.js; ES6)</li>
               </ul>
             </li>
 
@@ -117,7 +128,7 @@
                 <li>Founder of a one-man Ruby on Rails web development consultancy</li>
                 <li>Lead a team building an online marketplace for employers and freelancers (Kumdle)</li>
                 <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy (Express&nbsp;Kaszubski)</li>
-                <li>Built storage management system with automatic stocks and prices synchronization with warehouse data (TopWhite)</li>
+                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (TopWhite)</li>
                 <li>Built custom CMS system powering the website for a country guesthouse (Kania&nbsp;Lodge)</li>
               </ul>
             </li>
@@ -136,12 +147,13 @@
               </div>
 
               <ul class="experience-details">
-                <li>Led a team of seven (initially) Ruby on Rails developers building IT systems of AirHelp</li>
+                <li>Led a team of Ruby on Rails developers building IT systems of AirHelp</li>
                 <li>Introduced GitHub flow in the development process with pull requests and code reviews</li>
                 <li>Introduced CI process in the development workflow (using TeamCity)</li>
                 <li>Shaped best web development practices across the company</li>
                 <li>Embraced and encouraged the microservices architecture</li>
-                <li>Responsible for shaping the hiring process and hiring new developers (helped grow the company from eight to more than thirty Ruby developers)</li>
+                <li>Responsible for shaping the hiring process and hiring new developers</li>
+                <li>Scaled the team from eight to more than thirty developers</li>
                 <li>Leader of major internal projects (claim state machine, claim value model, OTA partners API, etc.)</li>
               </ul>
             </li>
@@ -216,7 +228,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterized logos into vectors) and designing printed ads</li>
+                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterised logos into vectors) and designing printed ads</li>
               </ul>
             </li>
           </ul>
@@ -239,10 +251,12 @@
         <h1>BIO</h1>
 
         <article>
-          <p>My main specialization is <strong>back-end</strong> web application development in
-          <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
+          <p>My main specialisation is <strong>back-end</strong> web application development in
+          <a href="http://rubyonrails.org/">Ruby on Rails</a>. Also experienced with serverless
+          approach utilising AWS Lambda functions (ES6 Javacsript; node.js) and front-end
+          Javascript programming in Vue.js/React.js.</p>
 
-          <p>I've been a Ruby/Rails developer for over <strong>twelve years</strong> now,
+          <p>I've been a Ruby/Rails developer for over <strong>thirteen years</strong> now,
           working remotely for most of my career.</p>
 
           <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
@@ -263,15 +277,15 @@
             <span>Ruby on Rails</span>
             <span>TDD</span>
             <span>RSpec</span>
-            <span>Git</span>
+            <span>Javascript (ES6)</span>
+            <span>Vue.js</span>
+            <span>React.js</span>
+            <span>Ember.js</span>
             <span>PostgreSQL</span>
             <span>MySQL</span>
+            <span>Git</span>
             <span>HTML5</span>
             <span>CSS3</span>
-            <span>Javascript</span>
-            <span>Vue.js</span>
-            <span>jQuery</span>
-            <span>Ember.js</span>
             <span>AWS</span>
             <span>AWS Lambda</span>
             <span>Solr</span>
